:toc: preamble
:project-url: https://github.com/sorairolake/scryptenc-rs
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/scryptenc-v0.9.2\...scryptenc-v0.9.3[0.9.3] - 2024-02-17

=== Fixed

* Fix syntax highlighting in `README.md`

== {compare-url}/scryptenc-v0.9.1\...scryptenc-v0.9.2[0.9.2] - 2024-02-17

=== Fixed

* Fix `example.path` in `Cargo.toml` ({pull-request-url}/178[#178])

== {compare-url}/scryptenc-v0.9.0\...scryptenc-v0.9.1[0.9.1] - 2024-02-17

=== Changed

* Bump MSRV to 1.74.0 ({pull-request-url}/163[#163])

== {compare-url}/v0.8.7\...scryptenc-v0.9.0[0.9.0] - 2024-01-18

=== Changed

* Change `Error::source` to return `Some` when the error is
  `Error::InvalidParams` ({pull-request-url}/110[#110])
* Merge `scryptenc-cli` crate ({pull-request-url}/115[#115])

=== Removed

* Remove `impl From<InvalidParams> for Error` ({pull-request-url}/110[#110])

== {compare-url}/v0.8.6\...v0.8.7[0.8.7] - 2024-01-07

=== Changed

* Change to use `bump-my-version`

== {compare-url}/v0.8.5\...v0.8.6[0.8.6] - 2023-12-07

=== Changed

* Supports input from stdin and output to a file in the examples
  ({pull-request-url}/93[#93])

== {compare-url}/v0.8.4\...v0.8.5[0.8.5] - 2023-11-29

=== Changed

* Bump MSRV to 1.70.0 ({pull-request-url}/90[#90])
* Enable `scrypt/std` when `std` feature is enabled ({pull-request-url}/91[#91])

== {compare-url}/v0.8.3\...v0.8.4[0.8.4] - 2023-11-04

=== Added

* Add Code of Conduct ({pull-request-url}/82[#82])
* Add serialization support for `Params` ({pull-request-url}/85[#85])

== {compare-url}/v0.8.2\...v0.8.3[0.8.3] - 2023-09-29

=== Removed

* Remove `Params::default` ({pull-request-url}/76[#76])
