@@ -3,7 +3,7 @@
 # SPDX-License-Identifier: Apache-2.0 OR MIT
 
 [tool.bumpversion]
-current_version = "0.9.3"
+current_version = "0.9.4"
 
 [[tool.bumpversion.files]]
 filename = "crates/scryptenc/README.md"
