@@ -59,7 +59,7 @@ jobs:
           targets: ${{ matrix.target }}
       - name: Install cross
         if: ${{ matrix.use-cross }}
-        uses: taiki-e/install-action@v2.32.7
+        uses: taiki-e/install-action@v2.32.9
         with:
           tool: cross
       - name: Cache build artifacts
