@@ -33,10 +33,10 @@ dialoguer.workspace = true
 fraction = { version = "0.15.1", default-features = false }
 humantime = "2.1.0"
 once_cell = "1.19.0"
-scryptenc = { version = "0.9.3", path = "../scryptenc" }
+scryptenc = { version = "0.9.4", path = "../scryptenc" }
 serde = { version = "1.0.197", features = ["derive"], optional = true }
 serde_json = { version = "1.0.115", optional = true }
-sysexits = "0.7.11"
+sysexits = "0.7.12"
 sysinfo = "0.30.8"
 thiserror = "1.0.58"
 
