@@ -4,7 +4,7 @@
 
 [package]
 name = "scryptenc"
-version = "0.9.3"
+version = "0.9.4"
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
