@@ -8,7 +8,7 @@
 [source,toml]
 ----
 [dependencies]
-scryptenc = "0.9.3"
+scryptenc = "0.9.4"
 ----
 
 == Crate features
