@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/scryptenc-v0.9.3\...scryptenc-v0.9.4[0.9.4] - 2024-04-08
+
+=== Changed
+
+* Update copyright notice ({pull-request-url}/223[#223])
+
 == {compare-url}/scryptenc-v0.9.2\...scryptenc-v0.9.3[0.9.3] - 2024-02-17
 
 === Fixed
